--- a/media-video/setpwc/ChangeLog
+++ b/media-video/setpwc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/setpwc
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/setpwc/ChangeLog,v 1.5 2005/07/27 09:53:12 phosphan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/setpwc/ChangeLog,v 1.6 2005/07/28 11:09:45 dholm Exp $
+
+  28 Jul 2005; David Holm <dholm@gentoo.org> setpwc-0.9.ebuild:
+  Added to ~ppc.
 
   27 Jul 2005; Patrick Kursawe <phosphan@gentoo.org> setpwc-0.9.ebuild:
   Latest stable for x86
