--- a/sys-cluster/onesis/ChangeLog
+++ b/sys-cluster/onesis/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-cluster/onesis
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/onesis/ChangeLog,v 1.1 2005/07/28 22:20:22 tantive Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/onesis/ChangeLog,v 1.2 2005/07/29 01:03:28 swegener Exp $
+
+  29 Jul 2005; Sven Wegener <swegener@gentoo.org> onesis-2.0_rc10.ebuild:
+  Cleanup.
 
 *onesis-2.0_rc10 (28 Jul 2005)
 
