--- a/kde-base/kbabel/ChangeLog
+++ b/kde-base/kbabel/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kbabel
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kbabel/Attic/ChangeLog,v 1.12 2005/07/28 21:16:11 danarmak Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kbabel/Attic/ChangeLog,v 1.13 2005/07/29 11:48:24 greg_g Exp $
+
+  29 Jul 2005; Gregorio Guidi <greg_g@gentoo.org>
+  +files/configure-fix-kdesdk-db-3.4.patch, kbabel-3.4.2.ebuild:
+  Add support for Berkeley DB.
 
 *kbabel-3.4.2 (28 Jul 2005)
 
