--- a/app-crypt/scsign/ChangeLog
+++ b/app-crypt/scsign/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-crypt/scsign
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/scsign/Attic/ChangeLog,v 1.3 2005/07/08 16:01:29 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/scsign/Attic/ChangeLog,v 1.4 2005/07/29 22:43:47 dragonheart Exp $
+
+  29 Jul 2005; Daniel Black <dragonheart@gentoo.org> scsign-0.0.4.ebuild,
+  scsign-0.0.5.ebuild:
+  removed die from epatch || die
 
   08 Jul 2005; David Holm <dholm@gentoo.org> scsign-0.0.5.ebuild:
   Added to ~ppc.
