--- a/app-crypt/seahorse/ChangeLog
+++ b/app-crypt/seahorse/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-crypt/seahorse
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/seahorse/ChangeLog,v 1.38 2005/05/10 01:12:34 joem Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/seahorse/ChangeLog,v 1.39 2005/07/29 23:07:08 dragonheart Exp $
+
+*seahorse-0.7.9 (29 Jul 2005)
+
+  29 Jul 2005; Daniel Black <dragonheart@gentoo.org>
+  seahorse-0.6.3-r1.ebuild, seahorse-0.7.5.ebuild, +seahorse-0.7.9.ebuild:
+  version bump. removed die from epatch || die
 
 *seahorse-0.7.8 (10 May 2005)
 
