--- a/net-misc/neon/ChangeLog
+++ b/net-misc/neon/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/neon
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/neon/Attic/ChangeLog,v 1.49 2005/07/20 10:25:03 ticho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/neon/Attic/ChangeLog,v 1.50 2005/07/29 23:41:03 ka0ttic Exp $
+
+  29 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> neon-0.24.7.ebuild:
+  Added ~mips.
 
   20 Jul 2005; Andrej Kacian <ticho@gentoo.org> neon-0.24.7.ebuild:
   Commented out the darwin sed call for now. Bug #99647.
