--- a/kde-base/kdebase-pam/ChangeLog
+++ b/kde-base/kdebase-pam/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdebase-pam
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdebase-pam/ChangeLog,v 1.16 2005/07/09 12:34:13 greg_g Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdebase-pam/ChangeLog,v 1.17 2005/07/30 07:58:57 greg_g Exp $
+
+  30 Jul 2005; Gregorio Guidi <greg_g@gentoo.org> kdebase-pam-5.ebuild,
+  kdebase-pam-6.ebuild:
+  Stable on x86.
 
 *kdebase-pam-6 (09 Jul 2005)
 
