--- a/app-mobilephone/yaps/ChangeLog
+++ b/app-mobilephone/yaps/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-mobilephone/yaps
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/yaps/ChangeLog,v 1.2 2005/07/29 10:41:25 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/yaps/ChangeLog,v 1.3 2005/07/30 09:03:54 sbriesen Exp $
+
+  30 Jul 2005; Stefan Briesenick <sbriesen@gentoo.org> yaps-0.96.ebuild:
+  correcting depend/rdepend for pkgconfig
 
   29 Jul 2005; David Holm <dholm@gentoo.org> yaps-0.96.ebuild:
   Added to ~ppc.
