--- a/media-gfx/inkscape/ChangeLog
+++ b/media-gfx/inkscape/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/inkscape
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.28 2005/07/05 08:33:34 zypher Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.29 2005/07/30 10:03:27 sekretarz Exp $
+
+*inkscape-0.42 (30 Jul 2005)
+
+  30 Jul 2005; <sekretarz@gentoo.org> +inkscape-0.42.ebuild:
+  Version bump, bug #100386
 
   05 Jul 2005; Marc Hildebrand <zypher@gentoo.org>
   inkscape-0.41-r1.ebuild:
