--- a/media-libs/xine-lib/ChangeLog
+++ b/media-libs/xine-lib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/xine-lib
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.235 2005/07/28 23:31:06 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.236 2005/07/30 10:12:09 flameeyes Exp $
+
+  30 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> xine-lib-1.1.0.ebuild:
+  Exclude two fbsd patches that are going to be dropped in the next patchset.
 
   28 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> xine-lib-1.1.0.ebuild:
   Updated patches for last version, removed unused patches, added patch for
