--- a/kde-base/kdeadmin/ChangeLog
+++ b/kde-base/kdeadmin/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdeadmin
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeadmin/Attic/ChangeLog,v 1.129 2005/07/28 13:00:30 greg_g Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeadmin/Attic/ChangeLog,v 1.130 2005/07/30 14:08:19 danarmak Exp $
+
+  30 Jul 2005; Dan Armak <danarmak@gentoo.org> kdeadmin-3.4.2.ebuild:
+  Removed ~mips keyword, because kdelibs-3.4.2 doesn't have it. The mips team
+  should readd it soon, I'm not sure why it's gone from kdelibs. This is
+  preparatory to unmasking.
 
 *kdeadmin-3.4.2 (28 Jul 2005)
 
