--- a/kde-base/kdeutils/ChangeLog
+++ b/kde-base/kdeutils/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdeutils
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeutils/Attic/ChangeLog,v 1.122 2005/07/28 13:04:37 greg_g Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeutils/Attic/ChangeLog,v 1.123 2005/07/30 14:10:43 danarmak Exp $
+
+  30 Jul 2005; Dan Armak <danarmak@gentoo.org> kdeutils-3.4.2.ebuild:
+  Removed ~mips keyword, because kdelibs-3.4.2 doesn't have it. The mips team
+  should readd it soon, I'm not sure why it's gone from kdelibs. This is
+  preparatory to unmasking.
 
 *kdeutils-3.4.2 (28 Jul 2005)
 
