--- a/dev-scheme/drscheme/ChangeLog
+++ b/dev-scheme/drscheme/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-lisp/drscheme
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-scheme/cvs-repo/gentoo-x86/dev-scheme/drscheme/Attic/ChangeLog,v 1.1 2005/07/30 19:17:33 karltk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-scheme/cvs-repo/gentoo-x86/dev-scheme/drscheme/Attic/ChangeLog,v 1.2 2005/07/30 19:59:44 karltk Exp $
+
+  30 Jul 2005; Karl Trygve Kalleberg <karltk@gentoo.org>
+  drscheme-209.ebuild:
+  Removed opengl useflag, as this now appears to be forced.
 
 *drscheme-209 (30 Jul 2005)
 
