--- a/dev-lang/spidermonkey/ChangeLog
+++ b/dev-lang/spidermonkey/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/spidermonkey
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/spidermonkey/ChangeLog,v 1.6 2005/04/18 15:20:10 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/spidermonkey/ChangeLog,v 1.7 2005/07/30 21:27:26 flameeyes Exp $
+
+  30 Jul 2005; Diego Pettenò <flameeyes@gentoo.org>
+  spidermonkey-1.5_rc6-r1.ebuild:
+  Stable on amd64 (dependency of gxine).
 
   18 Apr 2005; Markus Rothe <corsair@gentoo.org>
   spidermonkey-1.5_rc6-r1.ebuild:
