--- a/sys-kernel/genkernel/ChangeLog
+++ b/sys-kernel/genkernel/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/genkernel
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.111 2005/07/30 15:24:47 plasmaroo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.112 2005/07/30 22:39:55 plasmaroo Exp $
+
+*genkernel-3.3.5 (30 Jul 2005)
+
+  30 Jul 2005; <plasmaroo@gentoo.org> -genkernel-3.3.4.ebuild,
+  +genkernel-3.3.5.ebuild:
+  Fix initrd cosmetics and PPC compiles without --genzimage.
 
 *genkernel-3.3.4 (30 Jul 2005)
 
