--- a/net-firewall/psad/ChangeLog
+++ b/net-firewall/psad/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/psad
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/psad/ChangeLog,v 1.28 2005/07/31 03:09:02 battousai Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/psad/ChangeLog,v 1.29 2005/07/31 05:17:05 battousai Exp $
+
+  31 Jul 2005; Bryan Stine <battousai@gentoo.org> psad-1.3.4.ebuild:
+  Stable x86...whoops.
 
 *psad-1.4.2 (31 Jul 2005)
 
