--- a/sys-block/unieject/ChangeLog
+++ b/sys-block/unieject/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-block/unieject
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-block/cvs-repo/gentoo-x86/sys-block/unieject/Attic/ChangeLog,v 1.7 2005/07/30 23:42:37 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-block/cvs-repo/gentoo-x86/sys-block/unieject/Attic/ChangeLog,v 1.8 2005/07/31 07:06:00 corsair Exp $
+
+  31 Jul 2005; Markus Rothe <corsair@gentoo.org> unieject-3.ebuild:
+  added ~ppc64 (bug #100058)
 
 *unieject-3 (30 Jul 2005)
 
