--- a/app-benchmarks/nbench/ChangeLog
+++ b/app-benchmarks/nbench/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-benchmarks/nbench
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-benchmarks/cvs-repo/gentoo-x86/app-benchmarks/nbench/ChangeLog,v 1.9 2005/07/20 13:51:04 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-benchmarks/cvs-repo/gentoo-x86/app-benchmarks/nbench/ChangeLog,v 1.10 2005/07/31 07:10:11 dertobi123 Exp $
+
+  31 Jul 2005; Tobias Scherbaum <dertobi123@gentoo.org> nbench-2.2.2.ebuild:
+  ppc stable
 
   20 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org> nbench-2.2.2.ebuild:
   Stable on sparc
