--- a/app-mobilephone/ussp-push/ChangeLog
+++ b/app-mobilephone/ussp-push/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-mobilephone/ussp-push
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/ussp-push/Attic/ChangeLog,v 1.1 2005/07/30 15:37:21 mrness Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/ussp-push/Attic/ChangeLog,v 1.2 2005/07/31 11:11:28 dholm Exp $
+
+  31 Jul 2005; David Holm <dholm@gentoo.org> ussp-push-0.4.ebuild:
+  Added to ~ppc.
 
 *ussp-push-0.4 (30 Jul 2005)
 
