--- a/net-dialup/itund/ChangeLog
+++ b/net-dialup/itund/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/itund
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/itund/ChangeLog,v 1.1 2005/07/29 21:00:59 sbriesen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/itund/ChangeLog,v 1.2 2005/07/31 11:14:02 dholm Exp $
+
+  31 Jul 2005; David Holm <dholm@gentoo.org> itund-0.3.ebuild:
+  Added to ~ppc.
 
 *itund-0.3 (29 Jul 2005)
 
