--- a/dev-libs/dbh/ChangeLog
+++ b/dev-libs/dbh/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/dbh
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/dbh/Attic/ChangeLog,v 1.28 2005/07/09 06:41:46 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/dbh/Attic/ChangeLog,v 1.29 2005/07/31 21:10:58 dertobi123 Exp $
+
+  31 Jul 2005; Tobias Scherbaum <dertobi123@gentoo.org> dbh-1.0.24.ebuild:
+  ppc stable
 
   09 Jul 2005; Markus Rothe <corsair@gentoo.org> dbh-1.0.24.ebuild:
   Stable on ppc64
