--- a/dev-ruby/snmplib/ChangeLog
+++ b/dev-ruby/snmplib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/snmplib
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/snmplib/ChangeLog,v 1.5 2005/08/01 11:14:03 citizen428 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/snmplib/ChangeLog,v 1.6 2005/08/02 12:43:52 dholm Exp $
+
+  02 Aug 2005; David Holm <dholm@gentoo.org> snmplib-0.5.1.ebuild:
+  Added to ~ppc.
 
 *snmplib-0.5.1 (01 Aug 2005)
 
