--- a/dev-ruby/ruby-libart2/ChangeLog
+++ b/dev-ruby/ruby-libart2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-libart2
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-libart2/ChangeLog,v 1.22 2005/07/02 22:55:47 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-libart2/ChangeLog,v 1.23 2005/08/02 18:08:14 blubb Exp $
+
+  02 Aug 2005; Simon Stelling <blubb@gentoo.org> ruby-libart2-0.12.0.ebuild:
+  stable on amd64
 
   02 Jul 2005; Bryan Østergaard <kloeri@gentoo.org>
   ruby-libart2-0.12.0.ebuild:
