--- a/app-dicts/stardict/ChangeLog
+++ b/app-dicts/stardict/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-dicts/stardict
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/stardict/Attic/ChangeLog,v 1.22 2005/01/13 16:48:48 liquidx Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/stardict/Attic/ChangeLog,v 1.23 2005/08/02 19:57:54 gustavoz Exp $
+
+  02 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org> stardict-2.4.2.ebuild,
+  stardict-2.4.3.ebuild, stardict-2.4.4.ebuild:
+  Keyworded ~sparc
 
 *stardict-2.4.4 (13 Jan 2005)
 
