--- a/app-dicts/stardict-cdict-en-zh-gb/ChangeLog
+++ b/app-dicts/stardict-cdict-en-zh-gb/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-dicts/stardict-cdict-en-zh-gb
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/stardict-cdict-en-zh-gb/ChangeLog,v 1.5 2005/01/01 12:58:07 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/stardict-cdict-en-zh-gb/ChangeLog,v 1.6 2005/08/02 20:04:52 gustavoz Exp $
+
+  02 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
+  stardict-cdict-en-zh-gb-2.4.2.ebuild:
+  To ~sparc
 
   29 Jun 2004; Aron Griffis <agriffis@gentoo.org>
   stardict-cdict-en-zh-gb-2.4.2.ebuild:
