--- a/app-dicts/stardict-freedict-eng-ita/ChangeLog
+++ b/app-dicts/stardict-freedict-eng-ita/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-dicts/stardict-freedict-eng-ita
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/stardict-freedict-eng-ita/ChangeLog,v 1.6 2005/04/24 10:52:34 hansmi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/stardict-freedict-eng-ita/ChangeLog,v 1.7 2005/08/02 20:16:27 gustavoz Exp $
+
+  02 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
+  stardict-freedict-eng-ita-2.4.2.ebuild:
+  To ~sparc
 
   24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
   stardict-freedict-eng-ita-2.4.2.ebuild:
