--- a/app-dicts/stardict-xdict-zh-en-big5/ChangeLog
+++ b/app-dicts/stardict-xdict-zh-en-big5/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-dicts/stardict-xdict-zh-en-big5
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/stardict-xdict-zh-en-big5/ChangeLog,v 1.5 2005/01/01 13:02:47 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/stardict-xdict-zh-en-big5/ChangeLog,v 1.6 2005/08/02 20:31:18 gustavoz Exp $
+
+  02 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
+  stardict-xdict-zh-en-big5-2.4.2.ebuild:
+  To ~sparc
 
   29 Jun 2004; Aron Griffis <agriffis@gentoo.org>
   stardict-xdict-zh-en-big5-2.4.2.ebuild:
