--- a/sys-libs/com_err/ChangeLog
+++ b/sys-libs/com_err/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/com_err
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/com_err/Attic/ChangeLog,v 1.17 2005/07/25 19:47:46 killerfox Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/com_err/Attic/ChangeLog,v 1.18 2005/08/03 03:13:32 vapier Exp $
+
+  03 Aug 2005; Mike Frysinger <vapier@gentoo.org> com_err-1.38.ebuild:
+  Use bsd-shlibs on Darwin but elf-shlibs on all other systems #99728 by Kito.
 
   25 Jul 2005; Rene Nussbaumer <killerfox@gentoo.org> com_err-1.38.ebuild:
   Stable on hppa.
