--- a/mail-client/evolution/ChangeLog
+++ b/mail-client/evolution/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/evolution
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/evolution/ChangeLog,v 1.85 2005/08/03 09:50:31 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/evolution/ChangeLog,v 1.86 2005/08/03 21:31:00 ferdy Exp $
+
+  03 Aug 2005; Fernando J. Pereda <ferdy@gentoo.org>
+  evolution-2.2.3-r2.ebuild:
+  marked ~alpha
 
   03 Aug 2005; Simon Stelling <blubb@gentoo.org> evolution-2.2.3-r2.ebuild:
   stable on amd64
