--- a/media-sound/noteedit/ChangeLog
+++ b/media-sound/noteedit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/noteedit
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/noteedit/Attic/ChangeLog,v 1.14 2005/04/24 23:04:13 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/noteedit/Attic/ChangeLog,v 1.15 2005/08/04 15:04:34 flameeyes Exp $
+
+  04 Aug 2005; Diego Pettenò <flameeyes@gentoo.org> noteedit-2.7.4.ebuild:
+  Narrowed down kde-meta dependencies.
 
 *noteedit-2.7.4 (24 Apr 2005)
 
