--- a/x11-themes/gtk-engines-experience/ChangeLog
+++ b/x11-themes/gtk-engines-experience/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-experience
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-experience/ChangeLog,v 1.1 2005/08/04 07:24:14 leonardop Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-experience/ChangeLog,v 1.2 2005/08/04 15:15:30 dholm Exp $
+
+  04 Aug 2005; David Holm <dholm@gentoo.org>
+  gtk-engines-experience-0.9.7.ebuild:
+  Added to ~ppc.
 
 *gtk-engines-experience-0.9.7 (04 Aug 2005)
 
