--- a/dev-dotnet/gconf-sharp/ChangeLog
+++ b/dev-dotnet/gconf-sharp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-dotnet/gconf-sharp
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-dotnet/cvs-repo/gentoo-x86/dev-dotnet/gconf-sharp/ChangeLog,v 1.27 2005/05/24 17:38:43 latexer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-dotnet/cvs-repo/gentoo-x86/dev-dotnet/gconf-sharp/ChangeLog,v 1.28 2005/08/05 02:26:48 latexer Exp $
+
+  05 Aug 2005; Peter Johanson <latexer@gentoo.org>
+  gconf-sharp-1.0.10.ebuild:
+  Stable on x86.
 
 *gconf-sharp-1.0.10 (24 May 2005)
 *gconf-sharp-1.0.8-r1 (24 May 2005)
