--- a/dev-php/PEAR-XML_RPC/ChangeLog
+++ b/dev-php/PEAR-XML_RPC/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-php/PEAR-XML_RPC
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-XML_RPC/Attic/ChangeLog,v 1.22 2005/08/04 07:19:40 sebastian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-XML_RPC/Attic/ChangeLog,v 1.23 2005/08/05 16:01:36 gustavoz Exp $
+
+  05 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
+  PEAR-XML_RPC-1.3.3.ebuild:
+  Stable on sparc
 
   04 Aug 2005; Sebastian Bergmann <sebastian@gentoo.org>
   PEAR-XML_RPC-1.3.3.ebuild:
