--- a/dev-util/patchutils/ChangeLog
+++ b/dev-util/patchutils/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/patchutils
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/patchutils/ChangeLog,v 1.31 2005/04/07 14:43:27 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/patchutils/ChangeLog,v 1.32 2005/08/05 18:56:39 ciaranm Exp $
+
+  05 Aug 2005; Ciaran McCreesh <ciaranm@gentoo.org>
+  patchutils-0.2.30.ebuild:
+  Make test work
 
   07 Apr 2005; Simon Stelling <blubb@gentoo.org> patchutils-0.2.30.ebuild:
   stable on amd64
