--- a/net-misc/tightvnc/ChangeLog
+++ b/net-misc/tightvnc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/tightvnc
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/tightvnc/ChangeLog,v 1.51 2005/08/06 14:35:11 morfic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/tightvnc/ChangeLog,v 1.52 2005/08/06 14:37:53 morfic Exp $
+
+  06 Aug 2005; Daniel Goller <morfic@gentoo.org> ChangeLog:
+  Adding Manifest locally since it fails remotely
 
 *tightvnc-1.3_alpha7 (06 Aug 2005)
 
