--- a/media-sound/mpfc/ChangeLog
+++ b/media-sound/mpfc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/mpfc
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mpfc/ChangeLog,v 1.8 2005/05/28 13:19:01 luckyduck Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mpfc/ChangeLog,v 1.9 2005/08/07 13:37:28 hansmi Exp $
+
+  07 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> mpfc-1.3.5.ebuild:
+  Stable on ppc.
 
   28 May 2005; Jan Brinkmann <luckyduck@gentoo.org> -mpfc-1.3.2.ebuild,
   -mpfc-1.3.3.ebuild, -mpfc-1.3.4.ebuild, mpfc-1.3.5.ebuild:
