--- a/media-sound/pd/ChangeLog
+++ b/media-sound/pd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/pd
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/pd/Attic/ChangeLog,v 1.23 2005/04/12 22:03:09 luckyduck Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/pd/Attic/ChangeLog,v 1.24 2005/08/07 13:32:42 hansmi Exp $
+
+  07 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> pd-0.37.4.ebuild:
+  Stable on ppc.
 
 *pd-0.38.4 (13 Apr 2005)
 
