--- a/media-sound/tagtool/ChangeLog
+++ b/media-sound/tagtool/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/tagtool
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/tagtool/ChangeLog,v 1.12 2005/06/21 01:08:18 allanonjl Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/tagtool/ChangeLog,v 1.13 2005/08/07 13:34:32 hansmi Exp $
+
+  07 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> tagtool-0.11.1.ebuild:
+  Stable on ppc.
 
 *tagtool-0.12.2 (21 Jun 2005)
 
