--- a/net-misc/smb4k/ChangeLog
+++ b/net-misc/smb4k/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/smb4k
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/smb4k/ChangeLog,v 1.20 2005/06/18 13:10:04 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/smb4k/ChangeLog,v 1.21 2005/08/07 16:55:50 carlo Exp $
+
+*smb4k-0.6.1 (07 Aug 2005)
+
+  07 Aug 2005; Carsten Lohrke <carlo@gentoo.org> +smb4k-0.6.1.ebuild:
+  version bump
 
 *smb4k-0.6.0 (18 Jun 2005)
 
